--- a/tools/ci_build/github/azure-pipelines/linux-rocm-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-rocm-ci-pipeline.yml
@@ -197,7 +197,7 @@ jobs:
               --enable_nccl \
               --build_dir /build \
               --build_shared_lib \
-              --parallel --use_vcpkg \
+              --parallel \
               --build_wheel \
               --skip_submodule_sync \
               --test --enable_onnx_tests --enable_transformers_tool_test \
